syntax = "proto3";

service DataFlow {
	rpc GetPolicy(GetPolicyRequest) returns (GetPolicyResponse) {}
	rpc ListPolicy(ListPolicyRequest) returns (ListPolicyResponse) {}
	rpc CreatePolicy(CreatePolicyRequest) returns (CreatePolicyResponse) {}
	rpc UpdatePolicy(UpdatePolicyRequest) returns (UpdatePolicyResponse) {}
	rpc DeletePolicy(DeletePolicyRequest) returns (DeletePolicyResponse) {}
	rpc GetPlan(GetPlanRequest) returns (GetPlanResponse) {}
	rpc ListPlan(ListPlanRequest) returns (ListPlanResponse) {}
	rpc CreatePlan(CreatePlanRequest) returns (CreatePlanResponse) {}
	rpc UpdatePlan(UpdatePlanRequest) returns (UpdatePlanResponse) {}
	rpc DeletePlan(DeletePlanRequest) returns (DeletePlanResponse) {}
	rpc GetJob(GetJobRequest) returns (GetJobResponse) {}
	rpc ListJob(ListJobRequest) returns (ListJobResponse) {}
	rpc RunPlan(RunPlanRequest) returns (RunPlanResponse) {}
}

message Schedule {
    string type = 1;
    repeated string days = 2;
    string  time_point = 3;
	string  tigger_properties = 4;
}

message Policy {
	string id = 1;
	string name = 2;
	string tenant = 3;
	string description = 4;
	Schedule schedule = 5;
}

message GetPolicyRequest {
	string context = 1;
	string id = 2;
}

message GetPolicyResponse {
	string err = 1;
	Policy pol = 2;
}

message ListPolicyRequest {
    string context = 1;
}

message ListPolicyResponse {
    string err = 1;
    repeated Policy pols = 2;
}

message CreatePolicyRequest {
	string context = 1;
	Policy pol = 2;
}

message CreatePolicyResponse {
	string err = 1;
	string polId = 2;
}

message UpdatePolicyRequest {
	string context = 1;
	Policy pol = 2;
}

message UpdatePolicyResponse {
	string err = 1;
	string polId =2 ;
}

message DeletePolicyRequest {
	string context = 1;
	string id = 2;
}

message DeletePolicyResponse {
	string err = 1;
}

message KV {
	string key = 1;
	string value = 2;
}


message Filter {
	string prefix = 1;
	repeated KV tag = 2;
}

message Connector {
	string storType = 1;
	string bucketName = 2;
	repeated KV connConfig = 3;
}


message Plan {
	string id = 1;
	string name = 2;
	string description = 3;
	string type = 4;
	string policyId = 5;
	string policyName = 6;
	Connector sourceConn = 7;
	Connector destConn = 8;
	Filter filt = 9;
	bool overWrite = 10;
	bool remainSource = 11;
	string tenant = 12;
}

message CreatePlanRequest {
	string context = 1;
	Plan plan = 2;
}

message CreatePlanResponse {
	string err = 1;
	string planId = 2;
}

message GetPlanRequest {
	string context = 1;
	string id = 2;
}

message GetPlanResponse {
	string err = 1;
	Plan plan = 2;
}

message ListPlanRequest {
    string context = 1;
}

message ListPlanResponse {
    string err = 1;
    repeated Plan plans = 2;
}

message UpdatePlanRequest {
	string context = 1;
	Plan plan = 2;
}

message UpdatePlanResponse {
	string err = 1;
	string planId = 2;
}

message DeletePlanRequest {
	string context = 1;
	string id = 2;
}

message DeletePlanResponse {
	string err = 1;
}

message RunPlanRequest {
	string context = 1;
	string id = 2;
}

message RunPlanResponse {
	string err = 1;
	string jobId = 2;
}

message Job {
	string id = 1;
	string type = 2;
	string planName = 3;
	string planId = 4;
	string description = 5; //describe statistic information, such as total objs, finished objs
	string sourceLocation = 6;
	string destLocation = 7;
	int64  createTime = 8;
	int64  startTime = 9;
	int64  endTime = 10;
	bool overWrite = 11;
	bool remainSource = 12;
}

message GetJobRequest {
	string context = 1;
	string id = 2;
}

message GetJobResponse {
	string err = 1;
	Job job = 2;
}

message ListJobRequest {
    string context = 1;
}

message ListJobResponse {
    string err = 1;
    repeated Job jobs = 2;
}